spacing fixed?

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header{
 }
 
 .logo img {
-  width: 100%;
+  width: 200%;
   max-width: 100px;
 }
 
